--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -1,3 +1,3 @@
-<main
-  style="background-image: url('assets/img/backgrounds/background-1.webp')"
-></main>
+<main style="background-image: url('assets/img/backgrounds/background-1.webp')">
+  <app-welcome></app-welcome>
+</main>
