--- a/src/mixin.scss
+++ b/src/mixin.scss
@@ -1,6 +1,8 @@
 @mixin glassStyle() {
   background: rgba(0, 0, 0, 0.33);
   backdrop-filter: blur(27.5px);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  box-shadow: 0px 0px 32px 0px rgba(0, 0, 0, 0.25);
 }
 
 @mixin dFlex($jc: center, $ai: center, $gp: 0px) {
