--- a/src/app/home/components/welcome/welcome.component.html
+++ b/src/app/home/components/welcome/welcome.component.html
@@ -7,7 +7,7 @@
   <div class="buttons-wrapper">
     <app-glass-button
       [btnAction]="'Start'"
-      [btnName]="'Standart'"
+      [btnName]="'Standard'"
       [btnType]="'Flow Sequence'"
       (buttonClicked)="startStandardTimer()"
     ></app-glass-button>
