--- a/src/app/home/components/welcome/welcome.component.scss
+++ b/src/app/home/components/welcome/welcome.component.scss
@@ -1,4 +1,5 @@
 @import "./../../../../mixin.scss";
+@import "./../../../../styles.scss";
 
 section {
   @include dFlex($gp: 80px);
@@ -15,12 +16,12 @@ section {
   h1 {
     font-size: 80px;
     font-weight: 400;
-    color: white;
+    color: $copy-light;
   }
 
   span {
     font-size: 24px;
-    color: white;
+    color: $copy-light;
   }
 }
 
