--- a/src/app/shared/components/buttons/glass-button/glass-button.component.scss
+++ b/src/app/shared/components/buttons/glass-button/glass-button.component.scss
@@ -1,4 +1,5 @@
 @import "./../../../../../mixin.scss";
+@import "./../../../../../styles.scss";
 
 button {
   @include dFlex();
@@ -10,20 +11,20 @@ button {
   width: 275px;
 
   .action {
-    color: white;
+    color: $copy-light;
     font-size: 12px;
-    font-weight: 500;
+    font-weight: 300;
   }
 
   .name {
-    color: white;
+    color: $copy-light;
     font-size: 32px;
     font-weight: 700;
     text-transform: uppercase;
   }
 
   .type {
-    color: white;
+    color: $copy-light;
     font-size: 12px;
     font-weight: 300;
   }
