--- a/src/app/home/components/timer/timer.component.html
+++ b/src/app/home/components/timer/timer.component.html
@@ -1,3 +1,19 @@
 <section>
   <p>2h Flow Sequence of Brand Research</p>
+
+  <span class="minutes">25</span>
+
+  <span class="time-text">minutes</span>
+
+  <div class="seconds-bar-wrapper">
+    <div class="bar"></div>
+  </div>
+
+  <span class="time-text">seconds</span>
+
+  <img
+    (click)="editTimer()"
+    src="assets/img/icons/edit-flowsequence.svg"
+    alt="edit"
+  />
 </section>
