--- a/src/app/home/components/timer/timer.component.scss
+++ b/src/app/home/components/timer/timer.component.scss
@@ -24,7 +24,7 @@ section {
   }
 
   .time-text {
-    color: $copy-light;
+    color: rgba(255, 255, 255, 0.25);
     font-size: 24px;
     font-weight: 300;
   }
