--- a/src/app/home/components/timer/timer.component.html
+++ b/src/app/home/components/timer/timer.component.html
@@ -1,19 +1,31 @@
 <section>
-  <p>2h Flow Sequence of Brand Research</p>
+  <p>
+    {{
+      flowSequenceService.activeFlowSequence.name
+        ? flowSequenceService.activeFlowSequence.name
+        : "Choose your Flow Sequence"
+    }}
+  </p>
 
-  <span class="minutes">25</span>
+  <span class="minutes">{{ flowSequenceService.minutesRemaining }}</span>
 
   <span class="time-text">minutes</span>
 
   <div class="seconds-bar-wrapper">
-    <div class="bar"></div>
+    <div
+      [ngStyle]="{
+        width:
+          (this.flowSequenceService.secondsOfMinuteRemainung / 60) * 100 + '%'
+      }"
+      class="bar"
+    ></div>
   </div>
 
-  <span class="time-text">seconds</span>
+  <!-- <span class="time-text">seconds</span> -->
 
-  <img
+  <!-- <img
     (click)="editTimer()"
     src="assets/img/icons/edit-flowsequence.svg"
     alt="edit"
-  />
+  /> -->
 </section>
