--- a/src/app/home/components/timer/timer.component.scss
+++ b/src/app/home/components/timer/timer.component.scss
@@ -4,9 +4,11 @@
 section {
   @include dFlex($jc: flex-start);
   @include glassStyle();
+  position: relative;
   flex-direction: column;
   border-radius: 24px;
-  padding: 24px 48px;
+  padding: 120px 48px;
+  overflow: hidden;
 
   width: 400px;
 
@@ -30,18 +32,19 @@ section {
   }
 
   .seconds-bar-wrapper {
-    width: 228px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
     height: 8px;
     background-color: rgba(255, 255, 255, 0.75);
-    border-radius: 4px;
     overflow: hidden;
-    margin-top: 46px;
-    margin-bottom: 12px;
 
     .bar {
       width: 20%;
       height: 100%;
       background-color: rgb(106, 158, 157);
+      transition: width linear 1s;
     }
   }
 
