flow sequence service / media controls countdown pause next step / previous step

--- a/src/app/home/components/flow-sequence-details/flow-sequence-details.component.html
+++ b/src/app/home/components/flow-sequence-details/flow-sequence-details.component.html
@@ -62,7 +62,9 @@
 
     <div class="complete-upload-container">
       <img
-        class="sequence-complete"
+        [ngClass]="{
+          'sequence-complete': flowSequenceService.sequenceComplete
+        }"
         src="assets/img/icons/flow-checkbox.svg"
         alt=""
       />
