--- a/src/app/home/components/media-controls/media-controls.component.html
+++ b/src/app/home/components/media-controls/media-controls.component.html
@@ -1,10 +1,17 @@
 <section>
-  <img (click)="play()" src="assets/img/icons/play.svg" alt="play" />
   <img
+    class="chapter-img"
     (click)="previous()"
     src="assets/img/icons/previous-chapter.svg"
     alt="previous"
   />
+  <img (click)="play()" src="assets/img/icons/play.svg" alt="play" />
+
   <img (click)="pause()" src="assets/img/icons/pause.svg" alt="pause" />
-  <img (click)="next()" src="assets/img/icons/next-chapter.svg" alt="next" />
+  <img
+    class="chapter-img"
+    (click)="next()"
+    src="assets/img/icons/next-chapter.svg"
+    alt="next"
+  />
 </section>
