flow sequence play sounds on competion

--- a/src/app/home/components/media-controls/media-controls.component.html
+++ b/src/app/home/components/media-controls/media-controls.component.html
@@ -5,7 +5,28 @@
     src="assets/img/icons/previous-chapter.svg"
     alt="previous"
   />
-  <img (click)="play()" src="assets/img/icons/play.svg" alt="play" />
+  <!-- <img (click)="play()" src="assets/img/icons/play.svg" alt="play" /> -->
+
+  <svg
+    (click)="play()"
+    width="22"
+    height="26"
+    viewBox="0 0 22 26"
+    fill="none"
+    xmlns="http://www.w3.org/2000/svg"
+  >
+    <path
+      id="icon Start flow sequence"
+      d="M2.40217 1.1334C2.26119 1.04752 2.10059 1.00151 1.9367 1.00004C1.77281 0.998566 1.61145 1.04169 1.46903 1.12503C1.32661 1.20836 1.2082 1.32894 1.12582 1.47452C1.04344 1.62009 1.00003 1.78548 1 1.95387V24.0461C1.00003 24.2145 1.04344 24.3799 1.12582 24.5255C1.2082 24.6711 1.32661 24.7916 1.46903 24.875C1.61145 24.9583 1.77281 25.0014 1.9367 25C2.10059 24.9985 2.26119 24.9525 2.40217 24.8666L20.5453 13.8205C20.6838 13.736 20.7986 13.6159 20.8783 13.4721C20.9581 13.3282 21 13.1655 21 13C21 12.8345 20.9581 12.6718 20.8783 12.5279C20.7986 12.3841 20.6838 12.264 20.5453 12.1795L2.40217 1.1334Z"
+      fill="white"
+      fill-opacity="0.90"
+      stroke="white"
+      stroke-opacity="0.80"
+      stroke-width="0.75"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+    />
+  </svg>
 
   <img (click)="pause()" src="assets/img/icons/pause.svg" alt="pause" />
   <img
