reset bar with animation

--- a/src/app/home/components/timer/timer.component.html
+++ b/src/app/home/components/timer/timer.component.html
@@ -19,8 +19,7 @@
       }"
       class="bar"
       [ngClass]="{
-        'transition-opacity':
-          this.flowSequenceService.secondsOfMinuteRemainung !== 0
+        'transition-opacity': this.flowSequenceService.animateBar === true
       }"
     ></div>
   </div>
