--- a/src/app/home/components/timer/timer.component.html
+++ b/src/app/home/components/timer/timer.component.html
@@ -24,11 +24,10 @@
     ></div>
   </div>
 
-  <!-- <span class="time-text">seconds</span> -->
-
-  <!-- <img
+  @if (!flowSequenceDetailsOpen) {
+  <img
     (click)="editTimer()"
     src="assets/img/icons/edit-flowsequence.svg"
     alt="edit"
-  /> -->
+  />}
 </section>
