--- a/src/app/home/components/flow-sequence-details/flow-sequence-details.component.html
+++ b/src/app/home/components/flow-sequence-details/flow-sequence-details.component.html
@@ -18,6 +18,7 @@
 
   <div class="bottom-container">
     <svg
+      class="pointer"
       width="22"
       height="22"
       viewBox="0 0 22 22"
@@ -70,6 +71,7 @@
       />
 
       <svg
+        class="pointer"
         width="44"
         height="44"
         viewBox="0 0 44 44"
