--- a/src/app/home/components/flow-sequence-details/flow-sequence-details.component.scss
+++ b/src/app/home/components/flow-sequence-details/flow-sequence-details.component.scss
@@ -47,10 +47,6 @@ section {
     @include dFlex($gp: 16px, $ai: flex-end);
     width: 100%;
 
-    svg {
-      cursor: pointer;
-    }
-
     .progress-container {
       @include dFlex($jc: flex-start, $gp: 8px);
       border-radius: 8px;
@@ -67,10 +63,13 @@ section {
       img {
         width: 44px;
         height: 44px;
-        cursor: pointer;
       }
     }
   }
+}
+
+.pointer {
+  cursor: pointer;
 }
 
 .flow-time {
