settings-base component and styling

--- a/src/app/settings/components/settings-overlay/settings-overlay.component.html
+++ b/src/app/settings/components/settings-overlay/settings-overlay.component.html
@@ -1,4 +1,3 @@
-<section
-  (click)="closeOverlay()"
-  [ngClass]="{ 'start-animation': start }"
-></section>
+<section (click)="closeOverlay()" [ngClass]="{ 'start-animation': start }">
+  <app-settings-base [startAnimation]="start"></app-settings-base>
+</section>
