--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,6 +26,7 @@ $copy-light: rgba(255, 255, 255, 0.8);
 $copy-dark: rgba(0, 0, 0, 0.85);
 $inactive-text: rgb(165, 165, 165);
 $settings-background: rgb(34, 34, 34);
+$tab-background-color: rgb(48, 48, 48);
 
 $interface-accent-1: rgb(201, 0, 151);
 $interface-accent-1-dark: rgb(77, 0, 36);
