settings general component

--- a/src/app/settings/components/settings-base/settings-base.component.html
+++ b/src/app/settings/components/settings-base/settings-base.component.html
@@ -176,4 +176,9 @@
       <span>Buy Me A Coffee</span>
     </div>
   </nav>
+  <div class="content-wrapper">
+    @if (activeTab === 'general') {
+    <app-settings-general></app-settings-general>
+    }
+  </div>
 </section>
