settings custom timers component

--- a/src/app/settings/components/settings-base/settings-base.component.html
+++ b/src/app/settings/components/settings-base/settings-base.component.html
@@ -179,6 +179,8 @@
   <div class="content-wrapper">
     @if (activeTab === 'general') {
     <app-settings-general></app-settings-general>
+    } @else if (activeTab === "timers") {
+    <app-settings-custom-timers></app-settings-custom-timers>
     }
   </div>
 </section>
