custom timers box

--- a/src/app/settings/components/settings-custom-timers/settings-custom-timers.component.html
+++ b/src/app/settings/components/settings-custom-timers/settings-custom-timers.component.html
@@ -23,4 +23,21 @@
     </div>
     <span>( 3 of 10 )</span>
   </div>
+
+  <div class="saved-custom-timers-box">
+    <div>
+      <div>
+        <img src="assets\img\icons\dots.svg" alt="drag" />
+        <span>Test Timer Pogchamp</span>
+      </div>
+      <div>
+        <img
+          src="assets\img\icons\magnifying-glass.svg"
+          alt="magnifying-glass"
+        />
+        <button>Edit</button>
+        <button>Choose</button>
+      </div>
+    </div>
+  </div>
 </section>
