--- a/src/app/settings/components/settings-custom-timers/settings-custom-timers.component.scss
+++ b/src/app/settings/components/settings-custom-timers/settings-custom-timers.component.scss
@@ -53,3 +53,26 @@ section {
     }
   }
 }
+
+.saved-custom-timers-box {
+  @include dFlex($gp: 20px);
+  flex-direction: column;
+  width: 100%;
+
+  > div {
+    @include dFlex($jc: space-between);
+    background-color: $settings-background-light;
+    border-radius: 4px;
+    padding: 12px;
+    width: 100%;
+
+    > div {
+      @include dFlex($gp: 20px);
+
+      span {
+        font-size: 16px;
+        color: $copy-dark;
+      }
+    }
+  }
+}
