--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,6 +34,8 @@ $interface-accent-1-dark: rgb(77, 0, 36);
 $interface-accent-1-light: rgb(255, 163, 206);
 $interface-accent-1-extra-light: rgb(243, 205, 223);
 
+$interface-accent-2: rgb(253, 52, 147);
+
 $scrollbar-background: rgba(0, 0, 0, 0.15);
 
 /* FONTS */ /* rubik-300 - latin */
