--- a/src/app/settings/components/settings-custom-timers/settings-custom-timers.component.scss
+++ b/src/app/settings/components/settings-custom-timers/settings-custom-timers.component.scss
@@ -69,6 +69,10 @@ section {
     > div {
       @include dFlex($gp: 20px);
 
+      > img {
+        cursor: pointer;
+      }
+
       span {
         font-size: 16px;
         color: $copy-dark;
