--- a/src/app/shared/components/buttons/simple-settings-button/simple-settings-button.component.scss
+++ b/src/app/shared/components/buttons/simple-settings-button/simple-settings-button.component.scss
@@ -2,7 +2,7 @@
 
 button {
   font-size: 14px;
-  color: $copy-light;
+  color: rgb(251, 251, 251);
   background-color: $interface-accent-2;
   border-radius: 4px;
   border: unset;
