--- a/src/app/settings/components/settings-custom-timers/settings-custom-timers.component.scss
+++ b/src/app/settings/components/settings-custom-timers/settings-custom-timers.component.scss
@@ -58,25 +58,50 @@ section {
   @include dFlex($gp: 20px);
   flex-direction: column;
   width: 100%;
+}
+
+.sequence-card {
+  @include dFlex($jc: space-between);
+  background-color: $settings-background-light;
+  border-radius: 4px;
+  padding: 12px;
+  width: 100%;
 
   > div {
-    @include dFlex($jc: space-between);
-    background-color: $settings-background-light;
-    border-radius: 4px;
-    padding: 12px;
-    width: 100%;
+    @include dFlex($gp: 20px);
 
-    > div {
-      @include dFlex($gp: 20px);
+    > img {
+      cursor: pointer;
+    }
 
-      > img {
-        cursor: pointer;
-      }
-
-      span {
-        font-size: 16px;
-        color: $copy-dark;
-      }
+    span {
+      font-size: 16px;
+      color: $copy-dark;
     }
   }
+}
+
+.cdk-drag-preview {
+  border: none;
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.example-box:last-child {
+  border: none;
+}
+
+.saved-custom-timers-box.cdk-drop-list-dragging
+  .sequence-card:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
