--- a/src/styles.scss
+++ b/src/styles.scss
@@ -124,3 +124,6 @@ $scrollbar-background: rgba(0, 0, 0, 0.15);
   src: url("./../public/assets/fonts/rubik-v28-latin-700italic.woff2")
     format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
