--- a/src/app/settings/components/settings-base/settings-base.component.scss
+++ b/src/app/settings/components/settings-base/settings-base.component.scss
@@ -4,9 +4,7 @@
 section {
   @include dFlex($jc: flex-start, $gp: 40px);
   flex-direction: column;
-  // min-width: 810px;
-  // width: 50vw;
-  // width: 50svw;
+
   height: 100vh;
   height: 100svh;
   padding: 48px;
@@ -14,6 +12,7 @@ section {
   background-color: $settings-background;
   transform: translateX(100%);
   transition: transform 750ms ease-in-out;
+  overflow: auto;
 }
 
 .headline {
